<resources>
    <string name="app_name">My Inventory App</string>

    <string name="price">Price</string>
    <string name="ItemTitle">Item:</string>
    <string name="PriceTitle">Price:</string>
    <string name="quantityTitle">Quantity:</string>
    <string name="name">Name</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="submit">Submit</string>
    <string name="add_product">Add a product</string>
    <string name="item">Item</string>
    <string name="sale">sale</string>
</resources>
